# ksandr-gpt

./: .env.production  .env.staging  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  clean.sh  docker-compose.api.yaml  docker-compose.neo4j.yaml  docker-compose.vectorstore.yaml  docker-compose.yaml  docker_build.sh  ksandr.ipynb  ksandr.py  ksandr_cpu.ipynb  ksandr_gpu.ipynb  monitor_compose.sh  pyproject.toml  requirements.txt  schedule.sh  workflow.sh
api/: ask.sh  components.py  helpers.py  ingest_docs.py  main.py  update_document.py  update_metadata.py
doc/: README.md
docs/: convert_to_text.sh
docs/archive/: Bedieningshandleiding_B2021_DT_NL_2.txt  Bedieningshandleiding_B2021_DT_NL_3.txt  Operating_Instruction_B2021_DT_en_2.txt  Operating_Instruction_B2021_DT_en_3.txt  distribution_transformers_en_6.txt  distribution_transformers_en_8.txt
docs/metadata/: Bedieningshandleiding_B2021_DT_NL_1.json  distribution_transformers_en_2.json  test.json
docs/txt/: Operating_Instruction_B2021_DT_en_1.txt  distribution_transformers_en_1.txt  distribution_transformers_en_2.txt  distribution_transformers_en_3.txt  (+3 more)
ksandr/: Dockerfile  README.md  helpers.py  ingest_aads.py  main.py  pyproject.toml
langchain/: Dockerfile  README.md  config.py  dump_onbruikbare_data.py  get_embedding_function.py  graph.py  helpers.py  ingest_aads.py  llm.py  main.py  neo_chain.py.py  patterns.py  populate_database.py  query_data.py  refs.py  summary.py  templates.py  verwijder_duplicaten.py
workflow/: Dockerfile  README.md  clean_json.py  requirements.txt
(+53 files in other folders)
