[project]
name = "ksandr"
version = "0.1.0"
requires-python = ">=3.10"

dependencies = [
    "fastapi[standard]",
    "neo4j",
    "redis",
    "langchain>=0.2.14",
    "langchain-neo4j>=0.1.4",
    "langchain-community>=0.2.14",
    "langchain-text-splitters",
    "langchain_chroma",
    "langchain-huggingface",
    "chromadb",
    "sentence-transformers",
    "spacy",
    "Levenshtein",
    "PyPDF2",
    "bs4",
    "llama-cpp-python",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
